ajout article tapis

--- a/caisse.html
+++ b/caisse.html
@@ -44,17 +44,19 @@ window.onclick = function(event) {
     }
 }</script>
 <div id="deco">
-    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; top: 8em; left: 25em; width: 10em; height: 18em">
+
+    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; bottom : 15em; left: 25em; width: 10em; height: 18em">
     <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute; top: 8em; left: 40em; width: 15em; height: 9em">
     <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute; top: 5em; right: 5em; width: 12em; height: 15em">
-    <img id="table_salon" src=""     style="width: 18em; position: absolute; bottom: 5em; right: 20em; height: 12em;">
+    <img id="table_salon" src=""     style="width: 17em; position: absolute; bottom: 5em; right: 20em; height: 11em;">
     <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
     <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
     <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
     <img id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
     <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
     <img id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 20em;bottom: 3em; left: 27em">
+    <img id="tapis" src="" style="position: absolute ; width: 15em;bottom: 5em; left: 22em">
+    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 15em;bottom: 3em; left: 27em">
 
 </div>
 
@@ -77,9 +79,9 @@ window.onclick = function(event) {
 
 
 <div>
-<input type="image"  style="width: 10em" id="nb_tentatives">
+<input type="image"  style="width: 10em; position: absolute; left: 45%; top: 0em" id="nb_tentatives">
 </div>
-<div style="position: absolute;bottom: 0px; right: 0px; display: inline-block; text-align: center">
+<div style="position: absolute;bottom: 0em; right: 0em; display: inline-block; text-align: center">
     <span id="pieces" style="font-size: 2em"></span>
     <input type="image" src="image/sous.png" style="width: 10em; ">
 
