--- a/demande_paiement.html
+++ b/demande_paiement.html
@@ -13,7 +13,7 @@ Payer?
     <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; top: 8em; left: 25em; width: 10em; height: 18em">
     <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute; top: 8em; left: 40em; width: 15em; height: 9em">
     <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute; top: 5em; right: 5em; width: 12em; height: 15em">
-    <img id="table_salon" src=""     style="width: 18em; position: absolute; bottom: 5em; right: 20em; height: 12em;">
+    <img id="table_salon" src=""     style="width: 17em; position: absolute; bottom: 5em; right: 20em; height: 11em;">
     <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
     <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
     <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
@@ -21,13 +21,22 @@ Payer?
     <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
     <img id="spirale" src="" style="width: 10em; position: absolute; top: 5em; left: 55em;">
     <img src="./image/caisse.png" style="width: 15em; position: absolute; left:9em; bottom: 0em">
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 20em;bottom: 3em; left: 27em">
+    <img id="tapis" src="image/magasin/tapis.png" style="position: absolute ; width: 15em;bottom: 5em; left: 22em">
+    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 15em;bottom: 3em; left: 27em">
 
 </div>
 <script>
     document.getElementById("oui").addEventListener("click", function(){
         nouveau_produit = localStorage.getItem("achat")
-        if (localStorage['liste_biens'].length == 0){
+        if (localStorage['liste_biens'] == null) {
+            var new_liste = []
+            new_liste[0] = nouveau_produit
+            localStorage["liste_biens"] = JSON.stringify(new_liste)
+            var new_stored_datas = JSON.parse(localStorage['liste_biens'])
+            console.log(new_stored_datas)
+
+        }
+        else if (localStorage['liste_biens'].length == 0) {
             var new_liste = []
             new_liste[0] = nouveau_produit
             localStorage["liste_biens"] = JSON.stringify(new_liste)
