--- a/magasin.html
+++ b/magasin.html
@@ -52,6 +52,7 @@
 
     </tr>
     <tr>
+        <td><input type="image" src="image/magasin/tapis.png" style="width: 10em" alt="tapis" id="tapis" value="5" onclick="quest('tapis')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/etoile.png" style="width: 10em" alt="etoile" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/fleur.png" style="width: 10em" alt="fleur" id="fleur" value="5" onclick="quest('fleur')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/cercle.png" style="width: 10em " alt="cercle" id="cercle" value="10" onclick="quest('cercle')"><br>10 pièces</td>
