musique mis en commentaire

--- a/init.html
+++ b/init.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
 <script>
-    var myAudio = document.createElement("audio");
+    /*var myAudio = document.createElement("audio");
     myAudio.src = "hilal.mp3";
     myAudio.play();
     //myAudio.pause();
