suppression demander enregistrement_supprimer

--- a/caisse.html
+++ b/caisse.html
@@ -18,7 +18,7 @@
         <a href="./stock.html">Stock</a>
         <a href="./magasin.html">Magasin</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="demanderEnregistrement_supprimer.html">Supprimer ma partie</a>
+        <a href="supprimer_joueur.html">Supprimer ma partie</a>
         <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
     </div>
 </div>
