--- a/init.html
+++ b/init.html
@@ -23,7 +23,7 @@
     <source src="musique/hilal.mp3" type="audio/mp3">
     <p class="message-error">This media is not supported by your browser.</p>
 </audio>-->
-<input type="button" value="MENU PRINCIPAL" id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
+<input type="button" value="MENU PRINCIPAL" hidden id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
 <div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
 <div id="body_bky">
     <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">CREER UNE NOUVELLE PARTIE</a>
