--- a/magasin.html
+++ b/magasin.html
@@ -14,7 +14,7 @@
         <a href="./caisse.html">Caisse</a>
         <a href="./stock.html">Stock</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="demanderEnregistrement_supprimer.html">Supprimer ma partie</a>
+        <a href="supprimer_joueur.html">Supprimer ma partie</a>
         <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
     </div>
 </div>
