--- a/supprimer_joueur.html
+++ b/supprimer_joueur.html
@@ -47,7 +47,7 @@
 </div>
 <script>
     document.getElementById("annuler").addEventListener("click", function(){
-        location = "caisse.html";
+    window.history.back()
     }, false);
 
     document.getElementById("non").addEventListener("click", function(){
