--- a/caisse.html
+++ b/caisse.html
@@ -9,8 +9,12 @@
 
 </head>
 <!--https://openclassrooms.com/forum/sujet/input-placer-le-curseur-automatiquement-dedans-80024-->
-<body onload="document.getElementById('resultat').focus()" style="background-image: url('image/fondfinal.png'); background-size: cover">
-
+<body onload="document.getElementById('resultat').focus()" style="margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+background-color: #2980B9">
+<img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
 <div class="dropdown" style="float: left; position: absolute">
     <button onclick="myFunction()" class="dropbtn" style="background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em; color: #555555">MENU</button>
     <div id="myDropdown" class="dropdown-content">
@@ -45,30 +49,48 @@ window.onclick = function(event) {
 }</script>
 <div id="deco">
 
-    <img id="porte" src="image/magasin/porte_delabree.png" style="position:absolute; bottom : 15em; left: 25em; width: 10em; height: 18em">
-    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute; top: 8em; left: 40em; width: 15em; height: 9em">
-    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute; top: 5em; right: 5em; width: 12em; height: 15em">
-    <img id="table_salon" src=""     style="width: 17em; position: absolute; bottom: 5em; right: 20em; height: 11em;">
+    <img id="porte"onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 9%; left: 30%; top: 24%">
+    <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
+    <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
+    <img id="table_salon" src="image/magasin/table_salon.png" hidden style="position: absolute;    width: 16%; top: 45%; right: 33%">
     <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
     <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
     <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
     <img id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
     <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
     <img id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
-    <img id="tapis" src="" style="position: absolute ; width: 15em;bottom: 5em; left: 22em">
-    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ; width: 15em;bottom: 3em; left: 27em">
+    <img id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 47%">
+    <img id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 
 </div>
 
 <div style="float: left; margin-left: 1em">
-    <div id="bulle" style="position: absolute;bottom: 19em; left : 2em;background-color:white;text-align:center; height: 15em; padding:1em;border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;">
-        <span id="output" style=" font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */ font-weight:bold;font-size:2em;position:relative;top:26px;"></span>
-        <span id="arrow_border" style="width: 0;height: 0;line-height: 0;border-bottom:0px solid transparent;border-left:30px solid transparent;border-right:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-30px;left:65px;"></span>
-        <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;right:150px;"><span>
+    <div id="bulle" style="position: absolute;bottom: 47%; left : 10%;background-color:white;text-align:center;  padding:1em;border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;">
+        <span id="output" style="
+font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */
+font-weight:bold;
+font-size:1.5em;
+position:relative;
+top:5px"></span>
+        <span id="arrow_border" style="
+width: 0;
+height: 0;
+line-height: 0;
+border-bottom:30px solid transparent;
+border-left:30px solid transparent;
+border-right:30px solid #555555; /* couleur de la bordure de la bulle */
+position:absolute;
+bottom:-30px;
+right:50%;
+
+"></span>
     </div>
-    <img src="./image/chien.PNG" style="width: 10em; margin-left: 1em;position: absolute; left: 7em; bottom: 7em">
-    <img src="./image/caisse.png" style="width: 15em; position: absolute; left:9em; bottom: 0em">
-    <img src="./image/chat.png" style="width: 10em; position: absolute; left: 22em; bottom: 1em">
+    <img src="./image/chien.PNG" style="
+position:absolute; width: 10%; top:54%; left:19%">
+    <img src="./image/caisse.png" style="
+position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
+    <img src="./image/chat.png" style="
+position: absolute; width: 12%; left: 10%; top: 72%;">
 </div>
 <div id="score" style="position: absolute; margin-bottom: 0.5em;right: 1em; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 4em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none;""></div>
 <div id="calculette" style="position:absolute;right:3em;background-color: orangered; width: 46%; bottom: 10em; border-radius: 40px">
