--- a/magasin.html
+++ b/magasin.html
@@ -7,6 +7,8 @@
 </head>
 <body style="text-align: center;background-image: url('image/fond_magasin.jpg'); ">
 <!--MENU-->
+<img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='exterieur.html'">
+
 <div class="dropdown" style="float: left; ">
     <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
     <div id="myDropdown" class="dropdown-content">
