--- a/caisse.html
+++ b/caisse.html
@@ -89,7 +89,7 @@ position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
 position: absolute; width: 12%; left: 10%; top: 72%;">
 </div>
 <div id="score" style="position: absolute; margin-bottom: 0.5em;right: 1em; text-shadow: -1px -1px white, 1px 1px #333;text-align: center; width: 4em; height: 1em; padding:0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none;""></div>
-<div id="calculette" style="position:absolute;right:3em;background-color: orangered; width: 46%; bottom: 10em; border-radius: 40px">
+<div id="calculette" style="position:absolute;left: 40%;background-color: orangered; width: 46%; bottom: 10em; border-radius: 40px">
 <span id="calcul" style=" width: 40%; text-align:left;display:none; margin: auto; margin-top: 0.5em; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
     <input type="text" id="resultat" autocomplete="off" placeholder="Ecris le résultat ici" style="width:90%;display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 2em; ">
 <input type="submit" id="verif" style="padding:0.5em;margin:1em;margin-top: 0.2em;margin-bottom:0.5em;font-size: 2em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;">
