--- a/controleur_nom.html
+++ b/controleur_nom.html
@@ -3,6 +3,6 @@
         location = "creerPartie.html"
     }
     else {
-        location = "debut_jeu.html"
+        location = "tuto_debut.html"
     }
 </script>
